force-app/main/default/objects/Service_Parts_Used__c/Service_Parts_Used__c.object-meta.xml
<CustomObject>
    <label>Service Parts Used</label>
    <nameField>
        <displayFormat>SP-{0000}</displayFormat>
        <label>Service Parts Used Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Parts Used</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>