force-app/main/default/objects/Service_Parts_Used__c/fields/Part__c.field-meta.xml
<CustomField>
    <fullName>Part__c</fullName>
    <label>Part</label>
    <referenceTo>Parts_Inventory__c</referenceTo>
    <relationshipLabel>Service Parts Used</relationshipLabel>
    <relationshipName>Service_Parts_Used</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>