force-app/main/default/objects/Service_Parts_Used__c/fields/Quantity_Used__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Used__c</fullName>
    <description>Quantity used in this SR</description>
    <label>Quantity Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>